# adbase

./: .doozer.json  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DoxyFile  Makefile  README.md  cmake.sh  cmake_install.cmake  doozer.sh
Modules/: Findliblua.cmake  Findlibrdkafka.cmake
adbase/: CMakeLists.txt  Config.hpp  Head.hpp  Http.hpp  Kafka.hpp  Logging.hpp  Lua.hpp  Makefile  Mc.hpp  Metrics.hpp  Net.hpp  Utility.hpp  Version.hpp.in  cmake_install.cmake
adbase/Config/: IniConfig.cpp  IniConfig.hpp  IniParse.cpp  IniParse.hpp
adbase/Head/: Binary.cpp  Binary.hpp  Handler.cpp  Handler.hpp  Interface.cpp  Interface.hpp  wireshark_adhead.lua
adbase/Http/: Config.cpp  Config.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp
adbase/Kafka/: Consumer.cpp  Consumer.hpp  ConsumerBatch.cpp  ConsumerBatch.hpp  Producer.cpp  Producer.hpp
adbase/Logging/: AsyncLogging.cpp  AsyncLogging.hpp  LogFile.cpp  LogFile.hpp  LogStream.cpp  LogStream.hpp  Logging.cpp  Logging.hpp
adbase/Lua/: Adaptor.hpp  BindingClass.hpp  BindingManager.cpp  BindingManager.hpp  BindingNamespace.cpp  BindingNamespace.hpp  BindingUnwrapper.hpp  BindingUtils.cpp  BindingUtils.hpp  BindingWrapper.hpp  Engine.cpp  Engine.hpp
adbase/Mc/: Ascii.cpp  Ascii.hpp  Binary.cpp  Binary.hpp  ClientHandler.cpp  ClientHandler.hpp  Context.cpp  Context.hpp  Handler.cpp  Handler.hpp  Interface.cpp  Interface.hpp
adbase/Metrics/: Counter.cpp  Counter.hpp  Gauges.cpp  Gauges.hpp  Histograms.cpp  Histograms.hpp  Meters.cpp  Meters.hpp  Metrics.cpp  Metrics.hpp  Timer.cpp  Timer.hpp  Timers.cpp  Timers.hpp  degin.txt
adbase/Net/: Acceptor.cpp  Acceptor.hpp  Connector.cpp  Connector.hpp  EventLoop.cpp  EventLoop.hpp  InetAddress.cpp  InetAddress.hpp  Socket.cpp  Socket.hpp  SocketsOps.cpp  SocketsOps.hpp  TcpClient.cpp  TcpClient.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp  TcpWorker.cpp  TcpWorker.hpp  Timer.cpp  Timer.hpp  Types.hpp
adbase/Utility/: Buffer.hpp  Date.cpp  Date.hpp  Endian.hpp  FileSystem.cpp  FileSystem.hpp  ProcessInfo.cpp  ProcessInfo.hpp  Queue.hpp  Sequence.cpp  Sequence.hpp  Serialize.cpp  Serialize.hpp  Sha1.cpp  Sha1.hpp  Singleton.hpp  String.cpp  String.hpp  TimeZone.cpp  TimeZone.hpp  Timestamp.cpp  Timestamp.hpp
benchmark/: benchmark.php  benchmark_http.html  benchmark_mc.html  benchmark_mc.php  tpl.html
benchmark/data/: 10k  30k  50k  5k  get100b  get10k  get1k  get20k  get30k  get50k  getempty  set100b  set10k  set1k  set20k  set30k  set50k  setempty
docs/: Info.plist  Makefile  Nodes.xml  Tokens.xml  annotated.html  annotated_dup.js  benchmark.html  classes.html  dir_182f1d4ac0c09495f319b56d95c26917.html  dir_182f1d4ac0c09495f319b56d95c26917.js  dir_2a04c0823783aa9769e0cd8310c3f995.html  dir_2a04c0823783aa9769e0cd8310c3f995.js  dir_8b677ecb5ba8b60d99c174b270d9882f.html  dir_8b677ecb5ba8b60d99c174b270d9882f.js  dir_a0d27d92c09cc1c69d127d11bd49c58f.html  dir_a0d27d92c09cc1c69d127d11bd49c58f.js  dir_bf46d4396614e31c754e11ce763e1d1c.html  dir_bf46d4396614e31c754e11ce763e1d1c.js  dir_c1e068c2018133f93f43f5f197ff906b.html  dir_c1e068c2018133f93f43f5f197ff906b.js  dir_d07d5a2fc6740166701685bdf2dd7179.html  dir_d07d5a2fc6740166701685bdf2dd7179.js  dir_d36ae5e7d97a9be8b438647fd8d896de.html  dir_d36ae5e7d97a9be8b438647fd8d896de.js  dir_e4680a5d80d33515c4642e6a4c7f632d.html  dir_e4680a5d80d33515c4642e6a4c7f632d.js  dir_fc7187e60e0e0d5da47942c918cd1b0d.html  dir_fc7187e60e0e0d5da47942c918cd1b0d.js  files.html  files.js  functions.html  functions_0x7e.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  (+99 more)
docs/d0/d13/: classadbase_1_1http_1_1_response.html  classadbase_1_1http_1_1_response.js
docs/d0/d28/: unionadbase_1_1head_1_1_protocol_binary_header-members.html
docs/d0/d33/: _sockets_ops_8cpp.html  _sockets_ops_8cpp.js  _sockets_ops_8cpp_source.html
docs/d2/d0b/: group__mc.js  (+1 more)
docs/search/: search.idx
doozer/: doozer_ubuntu.sh
example/: CMakeLists.txt  base64.cpp  buffer.cpp  config.cpp  counter.cpp  date.cpp  enbain.cpp  eventloop.cpp  explode.cpp  gauges.cpp  head.cpp  hex2string.cpp  histograms.cpp  http.cpp  kafkabatch.cpp  kafkac.cpp  kafkap.cpp  logging.cpp  logging_out.cpp  lua.cpp  lua_stack.cpp  mallocTrim.cpp  mc.cpp  meters.cpp  procinfo.cpp  queue.cpp  queue_email.cpp  readfile.cpp  replace.cpp  sequence.cpp  sha1.cpp  sys_dir.cpp  sys_network.cpp  sys_status.cpp  tcpclient.cpp  timers.cpp  timestamp.cpp  timezone.cpp  trim.cpp  urlencode.cpp  (+2 more)
page/: benchmark.doc  index.doc  quickstart.doc  seed.doc  seedgrade.doc
seed/: CMakeLists.txt  Makefile  Seed.cpp  Seed.hpp  adbase.ini  adbase_skeleton  cmake_install.cmake
seed/c/: CMakeLists.txt.c  cmake.sh.c
seed/c/Modules/: FindProtobuf.cmake.c  Findlibadbase.cmake.c  Findlibadbase_kafka.cmake.c  Findlibevent.cmake.c  Findlibpthread.cmake.c  Findlibrdkafka.cmake.c
seed/c/conf/: system.ini.c
seed/c/protos/: adbase.proto.c
seed/c/rpm/: build_rpm.in.c  main.spec.in.c
seed/c/src/: AdServer.cpp.c  AdServer.hpp.c  AdbaseConfig.hpp.c  Aims.cpp.c  Aims.hpp.c  App.cpp.c  App.hpp.c  BootStrap.cpp.c  BootStrap.hpp.c  CMakeLists.txt.c  Grpc.cpp.c  Grpc.hpp.c  HeadProcessor.cpp.c  HeadProcessor.hpp.c  Http.cpp.c  Http.hpp.c  McProcessor.cpp.c  McProcessor.hpp.c  Timer.cpp.c  Timer.hpp.c  Version.hpp.in.c  main.cpp.c
seed/c/src/Aims/Kafka/: Consumer-@kafka_consumers-.cpp.c  Consumer-@kafka_consumers-.hpp.c  Consumer.cpp.c  Consumer.hpp.c  Producer-@kafka_producers-.cpp.c  Producer-@kafka_producers-.hpp.c  Producer.cpp.c  Producer.hpp.c
seed/c/src/Grpc/: ServerServiceImpl.cpp.c  ServerServiceImpl.hpp.c
seed/c/src/Http/: @http_controllers-.cpp.c  @http_controllers-.hpp.c  HttpInterface.cpp.c  HttpInterface.hpp.c  Server.cpp.c  Server.hpp.c
test/: Buffer.cpp  CMakeLists.txt  Date.cpp  Enbian.cpp  FileSystem.cpp  LogStreamTest.cpp  Makefile  Queue.cpp  Sequence.cpp  String.cpp  TestAll.cpp  Timestamp.cpp  cmake_install.cmake
(+542 files in other folders)
