INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
LINK_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../adbase/)
LINK_DIRECTORIES(/usr/local/lib)
if (M32)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -W -static-libstdc++ -m32")  
else()
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -W -gstabs+ -static-libstdc++")  
endif()
SET(LINK_FLAGS "${LINK_FLAGS} -static-libstdc++")

file(GLOB APP_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )
foreach(sourcefile ${APP_SOURCES} )
    # I used a simple string replace, to cut off .cpp.
    string( REPLACE ".cpp" "" exename ${sourcefile} )
    if (${exename} STREQUAL "http" OR ${exename} STREQUAL "mc")
        add_executable( ${exename} ${sourcefile} )
        TARGET_LINK_LIBRARIES(${exename} libadbase.a libevent.a rt)
    elseif(${exename} MATCHES "kafka*")
        if (USEKAFKA)
            add_executable( ${exename} ${sourcefile} )
            target_link_libraries(${exename} adbase adbase_kafka librdkafka.a rt)
        endif()
    elseif(${exename} MATCHES "lua*")
		if (USELUA)
            add_executable( ${exename} ${sourcefile} )
            target_link_libraries(${exename} adbase adbase_lua liblua.a pthread rt dl)
        endif()
    else() 
        add_executable( ${exename} ${sourcefile} )
        target_link_libraries(${exename} libadbase.a libevent.a rt)
    endif()
endforeach(sourcefile ${APP_SOURCES} )
