INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
LINK_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../adbase/)
LINK_DIRECTORIES(/usr/local/lib)
if (M32)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -W -static-libstdc++ -m32")
else()
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -W -gstabs+ -static-libstdc++")
endif()
SET(LINK_FLAGS "${LINK_FLAGS} -static-libstdc++")

file(GLOB APP_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )
SET(TEST_ALL ${APP_SOURCES})
ADD_EXECUTABLE(test_all ${TEST_ALL})
TARGET_LINK_LIBRARIES(test_all adbase libgtest.a libgtest_main.a pthread)
